# acs-email-sender

./: LICENSE  README.md  conftest.py  function_app.py  local.settings.json.template  pyproject.toml
.github/: dependabot.yml
.github/workflows/: azure-functions-app-python.yml  ci.yml
acs_email_sender/: config.py
acs_email_sender/blueprints/: bp_send.py
acs_email_sender/models/: email_message.py
acs_email_sender/services/: email_service.py
src/acs_email_sender/: config.py
src/acs_email_sender/blueprints/: bp_send.py
src/acs_email_sender/models/: email_message.py
src/acs_email_sender/services/: email_service.py
tests/blueprints/: test_bp_send.py
tests/services/: test_email_service.py
